discussion/kv_engine/176712/176712_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Pass Producer to BackfillManagerTask

The ownership hierarchy is the following:

  Producer
    -> BackfillManager
      -> BackfillTask
        -> BackfillManager (weak)

, with Task that stores a weak reference to Manager.

That model allows scenarios where a Producer connection has gone but
Task/Manager are still alive. Task needs to run a backfill for
realizing that the connection has been removed.

With this change we give Task a direct weak reference to Producer.
That way, Task would spot a dead Producer (and thus cancel itself)
before entering any backfill scan-loop.

Change-Id: I436cf6a7d5b5ebba6a913aa1e803c5c31dfaeac1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-28 11:52:03.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-28 11:52:16.000000000
Message: 
Patch Set 7: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304467/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 12:10:20.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/421/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/421/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/325/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/325/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/307/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/307/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/307/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/317/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/317/ )

Test exceeded the timeout:
[2022-06-28T11:59:18.850Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/452/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/452/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/314/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/305/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/305/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/306/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/306/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/306/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/299/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/299/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/299/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17513/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
